21 Jan 2007: 0.3.6 Miek <miek@miek.nl>
  -- minor bugfixes --
   * Small fixes for rdup-dump (Fabio Rossi)
   * sh-wrappers: print the unknown option when encountering one
   * gfunc.c: write remaining bytes when cutting of growing 
     files in a remote backup
   * Use DEcrypt and gUNzip when restoring
   * Added (local) locking in the shell wrapper tools
   * Allow control-C when reading the filelist file


27 Dec 2006: 0.3.5 Miek <miek@miek.nl>
  -- minor features added --
   * Added '-E file' option, with which you can give rdup an exlude
     list. This list contains extended POSIX regular expressions. See
     rdup(8) for more info.
   * Add -E to rdup-dump and rdup-snapshot 
   * Remove rdup-grep, as most functionality can be achieved with -E
   * Added rpm from: http://www.sisyphus.ru/srpm/rdup/spec
   * Add patch from Fabio Rossi to rdup-mirror, this add -u switch
     which makes rdup-mirror not create any date-directories.
   * Completely rewrite rdup-restore, it now uses rdup-cp and rdup
     to restore. Restores for rdup-snapshot added.
   * Documentation fixes
	

15 Dec 2006: 0.3.4 Miek <miek@miek.nl>
  -- bug fix release --
   * Output a prefix zero when printing permissions like: ---rwxrwx
   * When doing a remote backup and not running as root, rdup-snap
     needs to set the permissions of dirs in such a way that it
     can still access the directory (ie: chmod +wx $dir).
     Thanks to Robert Haskins
   * Add a rpm spec file; feedback welcomed
   * Install the manual page of rdup-snap-link
   * Remove the screenshot.jpg; makes tar.bz2 200K smaller


04 Dec 2006: 0.3.3 Miek <miek@miek.nl>
   -- bug fix release --
   * Really fix the backup creation when using rdup-snap-link


02 Dec 2006: 0.3.2 Miek <miek@miek.nl>
   -- bug fix --
   * Use rmdir and NOT unlink to remove directories
   * Never remove in rdup-cp
   * Fix a bug for dir creation when using rdup-snapshot
     (this triggered on an incr. dump, during a month change)

