@@ -38,7 +38,7 @@
 #define VERSION     "@PACKAGE_VERSION@"
 #define PROGNAME    "@PACKAGE_NAME@"
 
-#define BUFSIZE         2048
+#define BUFSIZE         4096
 #define NOBACKUP        ".nobackup"
 #define NULL_DUMP       0
 #define DIR_SEP         '/'
