@@ -1,4 +1,4 @@
-21 Jan 2007: 0.3.6 Miek <miek@miek.nl>
+25 Jan 2007: 0.3.6 Miek <miek@miek.nl>
   -- minor bugfixes --
    * Small fixes for rdup-dump (Fabio Rossi)
    * sh-wrappers: print the unknown option when encountering one
@@ -7,6 +7,10 @@
    * Use DEcrypt and gUNzip when restoring
    * Added (local) locking in the shell wrapper tools
    * Allow control-C when reading the filelist file
+   * When using /dev/null as filelist file, don't complain
+     about not being able to ftruncate it
+   * Always use our own getdelim() implementation
+   * pl-tools: add warning when not being able to close a file
 
 
 27 Dec 2006: 0.3.5 Miek <miek@miek.nl>
